fix: issue where boarder-radius was not applying on small screens on images

--- a/src/sections/EducationSection/EducationSection.scss
+++ b/src/sections/EducationSection/EducationSection.scss
@@ -1,15 +1,19 @@
 @import "../../styles//variables.scss";
 
 .education-section {
+  gap: 1.5rem;
+  display: grid;
   .summary {
     padding-top: 1rem;
   }
 
   .image-wrapper {
-      
+    border-radius: 16px;
+    overflow: hidden;
+
     img {
+      height: auto;
       width: 100%;
-      height: 100%;
     }
   }
 
@@ -17,15 +21,9 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 1.5rem;
-    padding: 1rem 0;
 
     @media (max-width: map-get($breakpoints, "sm")) {
-      display: block;
-
-      .image-wrapper {
-        padding: 0;
-        padding-bottom: 1rem;
-      }
+      grid-template-columns: 1fr;
     }
   }
 }
