--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -82,6 +82,10 @@ hr {
   margin: 15rem 0;
 }
 
+img {
+  display: block;
+}
+
 .wrapper-width-md {
   @media (min-width: map-get($breakpoints, "lg")) {
     max-width: map-get($breakpoints, "md");
